start photo section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="#skillset" class="nav__link">
                             <p>Skillset</p>
                         </a>
-                        <a href="#" class="nav__link">
+                        <a href="#photography" class="nav__link">
                             <p>Photography</p>
                         </a>
                         <a href="#work" class="nav__link">
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </header>
-        <section class="experience-section" data-tab="experience">
+        <section class="experience-section _section" data-tab="experience">
             <p class="experience-section__subtitle"><b>work experience</b></p>
             <h2 class="experience-section__title">Companies I have worked for in the past</h2>
             <div class="experience-section__items">
@@ -87,7 +87,7 @@
                 </div>
             </div>
         </section>
-        <section class="skills-section" data-tab="skillset">
+        <section class="skills-section _section" data-tab="skillset">
             <div class="skills-section__up-section">
                 <div class="skills-section-left-side">
                     <div>
@@ -166,7 +166,57 @@
                 </div>
             </div>
         </section>
-        <section class="project-section" data-tab="work">
+        <section class="photo-section" data-tab="photography">
+            <h2>Photography</h2>
+            <p>Here is a&#160;collection of&#160;my best travel pictures that I took while travelling places all around the&#160;world. </p>
+            <div class="photo-section__tab-container">
+                <ul>
+                    <li class="photo-section__tab-btn photo-section__tab-btn-active" data-tab="1">
+                        ITALY
+                    </li>
+                    <li class="photo-section__tab-btn" data-tab="2">
+                        AUSTRALIA
+                    </li>
+                    <li class="photo-section__tab-btn" data-tab="3">
+                        INDIA
+                    </li>
+                    <li class="photo-section__tab-btn" data-tab="4">
+                        BRAZIL
+                    </li>
+                </ul>
+                <div class="gallery">
+                    <div class="gallery__content _show" data-tab="1">
+                        <div class="gallery__item">
+                            <img src="./img/italyOne.png" alt="">
+                        </div>
+                        <div class="gallery__item">
+                            <img src="./img/italyTwo.png" alt="">
+                        </div>
+                        <div class="gallery__item">
+                            <img src="./img/italyThree.png" alt="">
+                        </div>
+                        <div class="gallery__item">
+                            <img src="./img/italyFour.png" alt="">
+                        </div>
+                    </div>
+                    <div class="gallery__content" data-tab="2">
+                        <div class="gallery__item">
+                            <img src="./img/australiaOne.png" alt="">
+                        </div>
+                        <div class="gallery__item">
+                            <img src="./img/australiaTwo.png" alt="">
+                        </div>
+                        <div class="gallery__item">
+                            <img src="./img/australiaThree.png" alt="">
+                        </div>
+                        <div class="gallery__item">
+                            <img src="./img/australiaFour.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="project-section _section" data-tab="work">
             <div class="project-section-up-section">
                     <p>MY PROJECTS</p>
                     <h2 class="project-section-up-section__title">
