fix and add photo section + change style

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 </div>
             </div>
         </section>
-        <section class="photo-section" data-tab="photography">
+        <section class="photo-section _section" data-tab="photography">
             <h2>Photography</h2>
             <p>Here is a&#160;collection of&#160;my best travel pictures that I took while travelling places all around the&#160;world. </p>
             <div class="photo-section__tab-container">
@@ -211,6 +211,34 @@
                         </div>
                         <div class="gallery__item">
                             <img src="./img/australiaFour.png" alt="">
+                        </div>
+                    </div>
+                    <div class="gallery__content" data-tab="3">
+                        <div class="gallery__item">
+                            <img src="./img/indiaOne.png" alt="">
+                        </div>
+                        <div class="gallery__item">
+                            <img src="./img/indiaTwo.png" alt="">
+                        </div>
+                        <div class="gallery__item">
+                            <img src="./img/indiaThree.png" alt="">
+                        </div>
+                        <div class="gallery__item">
+                            <img src="./img/indiaFour.png" alt="">
+                        </div>
+                    </div>
+                    <div class="gallery__content" data-tab="4">
+                        <div class="gallery__item">
+                            <img src="./img/brazilOne.png" alt="">
+                        </div>
+                        <div class="gallery__item">
+                            <img src="./img/brazilTwo.png" alt="">
+                        </div>
+                        <div class="gallery__item">
+                            <img src="./img/brazilThree.png" alt="">
+                        </div>
+                        <div class="gallery__item">
+                            <img src="./img/brazilFour.png" alt="">
                         </div>
                     </div>
                 </div>
