start footer and clear style

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a href="#work" class="nav__link">
                             <p>Work</p>
                         </a>
-                        <a href="#" class="nav__link">
+                        <a href="#contact" class="nav__link">
                             <p>Contact</p>
                         </a>
                     </div>
@@ -282,6 +282,21 @@
                 </div>
             </div>
         </section>
+        <section class="contact-section _section" data-tab="contact">
+            
+        </section>
+        <footer class="footer-section">
+            <div>
+                <img src="./img/logo.svg" alt="">
+            </div>
+            <div>
+                <p>redesign by Vladimir Serbin</p>
+                <a href="https://github.com/yanballas">
+                    <p>github</p>
+                </a>
+                <p>development by Vladimir Serbin</p>
+            </div>
+        </footer>
     </div>
     <script src="app.js"></script>
 </body>
