make contact and done with XXL and Xl ver

--- a/index.html
+++ b/index.html
@@ -283,18 +283,50 @@
             </div>
         </section>
         <section class="contact-section _section" data-tab="contact">
-            
+            <div class="contact-section__front">
+                <div class="contact-section-left-side">
+                    <h2>Let&#39;s get started</h2>
+                    <p>Now that you know a&#160;lot about me, let me know if&#160;you are interested to&#160;work with me.</p>
+                    <div></div>
+                </div>
+                <div class="contact-section-right-side">
+                    <div>
+                        <p><b>Name</b></p>
+                        <label>
+                                <input type="text">
+                        </label>
+                    </div>
+                    <div>
+                        <p><b>Email</b></p>
+                        <label>
+                            <input type="text">
+                        </label>
+                    </div>
+                    <div>
+                        <p><b>Message</b></p>
+                        <label>
+                            <input type="text">
+                        </label>
+                    </div>
+                    <div>
+                        <button class="contact-section-right-side_btn">
+                            Let&#39;s get started
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="contact-section__back">
+                <h4><b>Thank you! <br>I will contact you soon!</b></h4>
+            </div>
         </section>
         <footer class="footer-section">
             <div>
-                <img src="./img/logo.svg" alt="">
+                <img src="./img/footerLogo.svg" alt="">
             </div>
             <div>
-                <p>redesign by Vladimir Serbin</p>
-                <a href="https://github.com/yanballas">
-                    <p>github</p>
-                </a>
-                <p>development by Vladimir Serbin</p>
+                <p>2023 year / development &#38; redesign by Vladimir Serbin</p>
+                <a href="https://github.com/yanballas"></a>
+                <a href="https://t.me/yanballas"></a>
             </div>
         </footer>
     </div>
