сhange style & change appJs

--- a/index.html
+++ b/index.html
@@ -16,26 +16,24 @@
                     <img src="./img/logo.svg" alt="">
                 </div>
                 <div class="nav__menu">
-                    <div>
-                        <a href="#experience" class="nav__link">
-                            <p>Experience</p>
-                        </a>
-                        <a href="#philosophy" class="nav__link">
-                            <p>Philosophy</p>
-                        </a>
-                        <a href="#skillset" class="nav__link">
-                            <p>Skillset</p>
-                        </a>
-                        <a href="#photography" class="nav__link">
-                            <p>Photography</p>
-                        </a>
-                        <a href="#work" class="nav__link">
-                            <p>Work</p>
-                        </a>
-                        <a href="#contact" class="nav__link">
-                            <p>Contact</p>
-                        </a>
-                    </div>
+                    <a href="#experience" class="nav__link">
+                        <p>Experience</p>
+                    </a>
+                    <a href="#philosophy" class="nav__link">
+                        <p>Philosophy</p>
+                    </a>
+                    <a href="#skillset" class="nav__link">
+                        <p>Skillset</p>
+                    </a>
+                    <a href="#photography" class="nav__link">
+                        <p>Photography</p>
+                    </a>
+                    <a href="#work" class="nav__link">
+                        <p>Work</p>
+                    </a>
+                    <a href="#contact" class="nav__link">
+                        <p>Contact</p>
+                    </a>
                 </div>
             </nav>
             <div class="hero-section__content">
@@ -54,19 +52,19 @@
             <h2 class="experience-section__title">Companies I have worked for in the past</h2>
             <div class="experience-section__items">
                 <div class="experience-section__card">
-                    <p>01</p>
-                    <p><b><span>Google</span>, Interaction Designer</b></p>
-                    <p>I currently am the lead designer on&#160;the interaction design team for&#160;Google Play.</p>
+                    <p class="experience-section__card-title">01</p>
+                    <p class="experience-section__card-label"><b><span>Google</span>, Interaction Designer</b></p>
+                    <p class="experience-section__card-text">I currently am the lead designer on&#160;the interaction design team for&#160;Google Play.</p>
                 </div>
                 <div class="experience-section__card">
-                    <p>02</p>
-                    <p><b><span>Facebook</span>, Product Designer</b></p>
-                    <p>I&#39;ve worked on&#160;a&#160;wide variety of internal tools for facebook over the&#160;past 6 years.</p>
+                    <p class="experience-section__card-title">02</p>
+                    <p class="experience-section__card-label"><b><span>Facebook</span>, Product Designer</b></p>
+                    <p class="experience-section__card-text">I&#39;ve worked on&#160;a&#160;wide variety of internal tools for facebook over the&#160;past 6 years.</p>
                 </div>
                 <div class="experience-section__card">
-                    <p>03</p>
-                    <p><b><span>Dribbble</span>, Graphic Designer</b></p>
-                    <p>I started my design career with Dribbble. I was incharge of&#160;creating illustrations for the&#160;platform.</p>
+                    <p class="experience-section__card-title">03</p>
+                    <p class="experience-section__card-label"><b><span>Dribbble</span>, Graphic Designer</b></p>
+                    <p class="experience-section__card-text">I started my design career with Dribbble. I was incharge of&#160;creating illustrations for the&#160;platform.</p>
                 </div>
             </div>
         </section>
@@ -90,11 +88,11 @@
         <section class="skills-section _section" data-tab="skillset">
             <div class="skills-section__up-section">
                 <div class="skills-section-left-side">
-                    <div>
+                    <div class="skills-section-left-side__first-section">
                         <h2 class="skills-section-left-side__title">Skillset</h2>
                         <p>With skills in over 4 different fields of design, I am the perfect person to hire when it comes to a full fledged project. Whatever your needs are, I can pretty much take on any challenge.</p>
                     </div>
-                    <div></div>
+                    <div class="skills-section-left-side__second-section"></div>
                 </div>
                 <div class="skills-section-right-side">
                     <div class="skills-section-right-side__card">
@@ -283,11 +281,14 @@
             </div>
         </section>
         <section class="contact-section _section" data-tab="contact">
+            <div class="contact-section__back">
+                <h4><b>Thank you! <br>I will contact you soon!</b></h4>
+            </div>
             <div class="contact-section__front">
                 <div class="contact-section-left-side">
                     <h2>Let&#39;s get started</h2>
                     <p>Now that you know a&#160;lot about me, let me know if&#160;you are interested to&#160;work with me.</p>
-                    <div></div>
+                    <div class="contact-section-left-side__pic"></div>
                 </div>
                 <div class="contact-section-right-side">
                     <div>
@@ -315,15 +316,12 @@
                     </div>
                 </div>
             </div>
-            <div class="contact-section__back">
-                <h4><b>Thank you! <br>I will contact you soon!</b></h4>
-            </div>
         </section>
         <footer class="footer-section">
-            <div>
+            <div class="footer-section-left-side">
                 <img src="./img/footerLogo.svg" alt="">
             </div>
-            <div>
+            <div class="footer-section-right-side">
                 <p>2023 year / development &#38; redesign by Vladimir Serbin</p>
                 <a href="https://github.com/yanballas"></a>
                 <a href="https://t.me/yanballas"></a>
