make adaptive ver

--- a/index.html
+++ b/index.html
@@ -291,25 +291,25 @@
                     <div class="contact-section-left-side__pic"></div>
                 </div>
                 <div class="contact-section-right-side">
-                    <div>
+                    <div class="contact-section-right-side__container">
                         <p><b>Name</b></p>
                         <label>
                                 <input type="text">
                         </label>
                     </div>
-                    <div>
+                    <div class="contact-section-right-side__container">
                         <p><b>Email</b></p>
                         <label>
                             <input type="text">
                         </label>
                     </div>
-                    <div>
+                    <div class="contact-section-right-side__container">
                         <p><b>Message</b></p>
                         <label>
                             <input type="text">
                         </label>
                     </div>
-                    <div>
+                    <div class="contact-section-right-side__container">
                         <button class="contact-section-right-side_btn">
                             Let&#39;s get started
                         </button>
